// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Monitor constructor initializes with default props 1`] = `
Object {
  "decrementTime": 10000,
  "definitions": Array [
    Object {
      "name": "*",
      "regex": /\\.\\*/,
    },
  ],
  "failureCounts": Object {
    "*": 0,
  },
  "failureThreshold": 2,
  "paused": false,
  "statuses": Array [
    502,
    503,
    504,
  ],
}
`;

exports[`Service Monitor constructor initializes with the correct props 1`] = `
Object {
  "decrementTime": 5000,
  "definitions": Array [
    Object {
      "name": "*",
      "regex": /\\.\\*/,
    },
  ],
  "failureCounts": Object {
    "*": 0,
  },
  "failureThreshold": 2,
  "paused": false,
  "statuses": Array [
    502,
    503,
    504,
  ],
}
`;
